--- a/HMGreenCityMLM/Views/Accounts/RetopUp.cshtml
+++ b/HMGreenCityMLM/Views/Accounts/RetopUp.cshtml
@@ -98,7 +98,8 @@
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Plot Number <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
-                                                        @Html.TextBoxFor(m => m.PlotNumber, new { @class = "form-control", @Placeholder = "Plot Number" })
+                                                        @Html.TextBoxFor(m => m.PlotNumber, new { @class = "form-control", @Placeholder = "Plot Number", @onchange = "return CheckPlotStatus();" })
+                                                        <span style="color:red;" id="PlotStatus123"></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -485,50 +486,151 @@
             }
         });
     }
-    function getsectorname() {
-        $("#divload").css({ 'display': '' });
-        $.ajax({
-            url: '/Accounts/GetSectorName',
-            type: "GET",
-            dataType: "JSON",
-            data: { Fk_SiteId: $('#Fk_SiteId').val() },
-            success: function (data) {
+    //function getsectorname() {
+    //    $("#divload").css({ 'display': '' });
+    //    $.ajax({
+    //        url: '/Accounts/GetSectorName',
+    //        type: "GET",
+    //        dataType: "JSON",
+    //        data: { Fk_SiteId: $('#Fk_SiteId').val() },
+    //        success: function (data) {
 
-                $("#FK_SectorId").html(""); // clear before appending new list 
-                $("#FK_SectorId").empty();
-                $("#FK_SectorId").append(
-                      $('<option></option>').val(0).html('Select Sector'));
-                $.each(data.ddlSector, function (index, BlockCount) {
+    //            $("#FK_SectorId").html(""); // clear before appending new list 
+    //            $("#FK_SectorId").empty();
+    //            $("#FK_SectorId").append(
+    //                  $('<option></option>').val(0).html('Select Sector'));
+    //            $.each(data.ddlSector, function (index, BlockCount) {
+    //                $("#FK_SectorId").append(
+    //                      $('<option></option>').val(BlockCount.Value).html(BlockCount.Text));
+    //            });
+    //        }
+
+    //    });
+    //    $("#divload").css({ 'display': 'none' });
+    //}
+    //function getblockname() {
+    //    $("#divload").css({ 'display': '' });
+    //    $.ajax({
+    //        url: '/Accounts/GetBlockName',
+    //        type: "GET",
+    //        dataType: "JSON",
+    //        data: { Fk_SiteId: $('#Fk_SiteId').val(), FK_SectorId: $('#FK_SectorId').val() },
+    //        success: function (data) {
+
+    //            $("#Fk_BlockId").html(""); // clear before appending new list 
+    //            $("#Fk_BlockId").empty();
+    //            $("#Fk_BlockId").append(
+    //                  $('<option></option>').val(0).html('Select Block'));
+    //            $.each(data.ddlblock, function (index, BlockCount) {
+    //                $("#Fk_BlockId").append(
+    //                      $('<option></option>').val(BlockCount.Value).html(BlockCount.Text));
+    //            });
+    //        }
+
+    //    });
+    //    $("#divload").css({ 'display': 'none' });
+
+    //}
+</script>
+
+
+<script>
+
+
+    function CheckPlotStatus() {
+        debugger
+        $("#divload").css({ 'display': '' });
+        var siteID = $('#Fk_SiteId').val();
+        var sectorID = $('#FK_SectorId').val();
+        var block = $('#Fk_BlockId').val();
+        var plotno = $('#PlotNumber').val();
+
+        $.ajax({
+            url: '/Master/CheckPlotForRetopup', type: 'get', dataType: 'json',
+            data: { 'SiteID': siteID, 'SectorID': sectorID, 'BlockID': block, 'PlotNumber': plotno },
+            success: function (data) {
+                $("#divload").css({ 'display': 'none' });
+                if (data.Result == "yes") {
+                    $("#PlotNumber").removeClass('errortext');
+                    $("#PlotStatus123").text(data.PlotStatus);
+                }
+                else if (data.Result == "no") {
+                    alert('This Plot Number is not available !');
+                    $("#PlotNumber").addClass('errortext');
+                    $('#PlotNumber').focus();
+                    $("#PlotNumber").val('');
+                }
+                else {
+                    alert('Plot not available !');
+                    $("#PlotNumber").addClass('errortext');
+                    $("#PlotNumber").val('');
+                }
+            }
+        });
+    }
+
+
+
+    //function onSiteChange() {
+
+    function getsectorname() {
+        debugger;
+        var value = $('#Fk_SiteId').val();
+        var values = $('#FK_SectorId').val();
+        var tr = [];
+        $.ajax({
+            url: "/Master/GetSelectSectorFromCrmForRetopup",
+            Type: "Get",
+            DataType: "JSON",
+            data: { SiteID: value },
+            success: function (data) {
+                var j = 1;
+                if (data.Result == "yes") {
+                    $('#Rate').val(data.Rate);
+                    $("#FK_SectorId").html(""); // clear before appending new list
+                    $("#FK_SectorId").empty();
                     $("#FK_SectorId").append(
-                          $('<option></option>').val(BlockCount.Value).html(BlockCount.Text));
-                });
+                          $('<option></option>').val(0).html('Select Phase'));
+                    $.each(data.ddlSector, function (index, Sectorcount) {
+                        $("#FK_SectorId").append(
+                              $('<option></option>').val(Sectorcount.Value).html(Sectorcount.Text));
+
+                    });
+
+                }
+                else {
+                    $("#FK_SectorId").empty();
+                    $('#Rate').val('');
+                }
+
+
             }
 
         });
-        $("#divload").css({ 'display': 'none' });
+
     }
+
+    //function onSectorChange() {
     function getblockname() {
-        $("#divload").css({ 'display': '' });
+        debugger;
+        var siteID = $('#Fk_SiteId').val();
+        var sectorID = $('#FK_SectorId').val();
         $.ajax({
-            url: '/Accounts/GetBlockName',
-            type: "GET",
-            dataType: "JSON",
-            data: { Fk_SiteId: $('#Fk_SiteId').val(), FK_SectorId: $('#FK_SectorId').val() },
+            url: '/Master/GetBlockListFromCrmForRetopup', type: 'post', dataType: 'json',
+            data: { 'SiteID': siteID, 'sectorID': sectorID },
             success: function (data) {
 
-                $("#Fk_BlockId").html(""); // clear before appending new list 
+                $("#Fk_BlockId").html(""); // clear before appending new list
                 $("#Fk_BlockId").empty();
                 $("#Fk_BlockId").append(
                       $('<option></option>').val(0).html('Select Block'));
-                $.each(data.ddlblock, function (index, BlockCount) {
+                $.each(data.lstBlock, function (index, BlockCount) {
                     $("#Fk_BlockId").append(
                           $('<option></option>').val(BlockCount.Value).html(BlockCount.Text));
                 });
+
             }
 
         });
-        $("#divload").css({ 'display': 'none' });
-
     }
 </script>
-
