--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/Topup.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Accounts/Topup.cshtml
@@ -41,8 +41,8 @@
                                                             <input type="radio" id="rdb_type" name="rdbtype" onclick="return showdetails('Product')" /> Product
                                                         </div>*@
                                                     <div class="col-sm-9">
-                                                        <input type="radio"  name="rdbtype" onclick="return showdetails('NewBusiness')" value="NewBusiness"/> New Business
-                                                        <input type="radio"  name="rdbtype" onclick="return showdetails('OtherBusiness')"  value="OtherBusiness"/> Other Business
+                                                        <input type="radio" name="rdbtype" onclick="return showdetails('NewBusiness')" value="NewBusiness" /> New Business
+                                                        <input type="radio" name="rdbtype" onclick="return showdetails('OtherBusiness')" value="OtherBusiness" /> Other Business
                                                     </div>
                                                 </div>
                                             </div>
@@ -51,9 +51,9 @@
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label">Reward<span style="color: red">*</span></label>
                                                     @*<div class="col-sm-9" style="display:none">
-                                                        <input type="radio" id="rdb_type" name="rdbtype" checked="checked" onclick="return showdetails('RealEstate')" /> Real Estate
-                                                        <input type="radio" id="rdb_type" name="rdbtype" onclick="return showdetails('Product')" /> Product
-                                                    </div>*@
+                                                            <input type="radio" id="rdb_type" name="rdbtype" checked="checked" onclick="return showdetails('RealEstate')" /> Real Estate
+                                                            <input type="radio" id="rdb_type" name="rdbtype" onclick="return showdetails('Product')" /> Product
+                                                        </div>*@
                                                     <div class="col-sm-9">
                                                         <input type="radio" name="rdbtypename" onclick="return showdetailsreward('IsInclude')" value="IsInclude" /> Is Include
                                                         <input type="radio" name="rdbtypename" onclick="return showdetailsreward('NotInclude')" value="NotInclude" /> Not Include
@@ -121,12 +121,10 @@
                                                     <label class="col-sm-3 col-form-label">Plot Number <span style="color: red">*</span></label>
                                                     <div class="col-sm-9">
                                                         @Html.TextBoxFor(m => m.PlotNumber, new { @class = "form-control", @Placeholder = "Plot Number", @onchange = "return CheckPlotStatus();" })
-
+                                                        <label id="CheckPlotStatus123" style="color:red;"></label>
                                                         @*@Html.HiddenFor(m => m.PlotID)
-                                                        @Html.HiddenFor(m => m.PlotSize)
-                                                        @Html.HiddenFor(m => m.BookingPercent)*@
-
-
+                                                            @Html.HiddenFor(m => m.PlotSize)
+                                                            @Html.HiddenFor(m => m.BookingPercent)*@
                                                     </div>
                                                 </div>
                                             </div>
@@ -397,14 +395,13 @@
     function validateform() {
         debugger;
         $(".errortext").removeClass("errortext");
-       
+
         var status = $("input[name='rdbtype']:checked").val();
 
         if (status == "NewBusiness") {
-            
+
         }
-        else if(status == "OtherBusiness")
-        {
+        else if (status == "OtherBusiness") {
 
         }
         else {
@@ -677,6 +674,7 @@
                 $("#divload").css({ 'display': 'none' });
                 if (data.Result == "yes") {
                     $("#PlotNumber").removeClass('errortext');
+                    $("#CheckPlotStatus123").text(data.PlotStatus);
                 }
                 else if (data.Result == "no") {
                     alert('Invalid Plot Number !');
