--- a/HMGreenCityMLM/Views/Master/SiteMasterList.cshtml
+++ b/HMGreenCityMLM/Views/Master/SiteMasterList.cshtml
@@ -41,7 +41,7 @@
                                                         <th>S No.</th>
                                                         <th>Site Name</th>
                                                         <th>Location</th>
-                                                        <th>Action</th>
+                                                        @*<th>Action</th>*@
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -57,10 +57,10 @@
                                                                     <td>@Item.SiteName</td>
                                                                     <td>@Item.Location</td>
 
-                                                                    <td>
+                                                                    @*<td>
                                                                         <a href="/Master/SiteMaster?SiteID=@Item.SiteID" class="btn btn-info btn-sm">Edit</a>
                                                                         <a href="/Master/DeleteSite?id=@Item.SiteID" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this Site?');" name="btnDelete">Delete</a>
-                                                                       </td>
+                                                                       </td>*@
 
                                                                 </tr>
 
